Minor Comments and Gui changes, Minor Bug Fix

--- a/pygubu_ui/change_setting_generic_value.ui
+++ b/pygubu_ui/change_setting_generic_value.ui
@@ -22,6 +22,7 @@
         <property name="orient">horizontal</property>
         <layout manager="pack">
           <property name="fill">x</property>
+          <property name="pady">5 0</property>
           <property name="propagate">True</property>
           <property name="side">top</property>
         </layout>
