--- a/pygubu_ui/change_setting_inside_file.ui
+++ b/pygubu_ui/change_setting_inside_file.ui
@@ -18,11 +18,24 @@
       </object>
     </child>
     <child>
+      <object class="ttk.Separator" id="inside_file_sparator">
+        <property name="orient">horizontal</property>
+        <layout manager="pack">
+          <property name="expand">true</property>
+          <property name="fill">x</property>
+          <property name="pady">5 0</property>
+          <property name="propagate">True</property>
+          <property name="side">top</property>
+        </layout>
+      </object>
+    </child>
+    <child>
       <object class="ttk.Labelframe" id="select_setting_labelframe">
         <property name="height">200</property>
         <property name="text" translatable="yes">Select the option you want to change it's value</property>
         <property name="width">200</property>
         <layout manager="pack">
+          <property name="padx">7</property>
           <property name="propagate">True</property>
           <property name="side">bottom</property>
         </layout>
@@ -52,7 +65,7 @@
         <property name="text" translatable="yes">Setting file description: </property>
         <layout manager="pack">
           <property name="padx">7</property>
-          <property name="pady">12</property>
+          <property name="pady">7 12</property>
           <property name="propagate">True</property>
           <property name="side">left</property>
         </layout>
