--- a/pygubu_ui/change_setting_main.ui
+++ b/pygubu_ui/change_setting_main.ui
@@ -18,6 +18,7 @@
             <property name="text" translatable="yes">Select the setting file</property>
             <layout manager="pack">
               <property name="padx">80</property>
+              <property name="pady">5</property>
               <property name="propagate">True</property>
               <property name="side">top</property>
             </layout>
@@ -30,6 +31,7 @@
             <layout manager="pack">
               <property name="expand">true</property>
               <property name="fill">x</property>
+              <property name="padx">5</property>
               <property name="propagate">True</property>
               <property name="side">top</property>
             </layout>
@@ -39,6 +41,7 @@
           <object class="ttk.Button" id="file_button">
             <property name="text" translatable="yes">Accept</property>
             <layout manager="pack">
+              <property name="pady">5</property>
               <property name="propagate">True</property>
               <property name="side">top</property>
             </layout>
