--- a/pygubu_ui/manage_setting_edit_file.ui
+++ b/pygubu_ui/manage_setting_edit_file.ui
@@ -18,6 +18,30 @@
       </object>
     </child>
     <child>
+      <object class="ttk.Label" id="edit_file_description_label">
+        <property name="text" translatable="yes">asdasdasd</property>
+        <layout manager="pack">
+          <property name="anchor">w</property>
+          <property name="padx">10</property>
+          <property name="pady">10 0</property>
+          <property name="propagate">True</property>
+          <property name="side">top</property>
+        </layout>
+      </object>
+    </child>
+    <child>
+      <object class="ttk.Separator" id="separator1">
+        <property name="orient">horizontal</property>
+        <layout manager="pack">
+          <property name="expand">true</property>
+          <property name="fill">x</property>
+          <property name="pady">5</property>
+          <property name="propagate">True</property>
+          <property name="side">top</property>
+        </layout>
+      </object>
+    </child>
+    <child>
       <object class="ttk.Frame" id="edit_file_sub_frame">
         <property name="height">200</property>
         <property name="width">200</property>
@@ -68,7 +92,7 @@
       </object>
     </child>
     <child>
-      <object class="ttk.Separator" id="edit_file_separator">
+      <object class="ttk.Separator" id="edit_file_separator_2">
         <property name="orient">horizontal</property>
         <layout manager="pack">
           <property name="expand">true</property>
